eagerloaded tabs commit

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -12,3 +12,10 @@
     If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
   </p>
 </ion-content>
+
+<ion-tabs>
+  <ion-tab tabIcon="add" [root]="addPg"></ion-tab>
+  <ion-tab tabIcon="contacts" [root]="friendsPg"></ion-tab>
+  <ion-tab tabIcon="locate" [root]="placesPg"></ion-tab>
+  <ion-tab tabIcon="glasses" [root]="aroundPg"></ion-tab>
+</ion-tabs>`
